[gd_scene load_steps=3 format=3 uid="uid://bvl71gsqryfai"]

[ext_resource type="Script" path="res://level/game_overlay.gd" id="1_6vak0"]
[ext_resource type="Theme" uid="uid://cehlnuq88iqv4" path="res://primary_theme.tres" id="1_wh8a7"]

[node name="GameOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6vak0")

[node name="PointsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 679.0
offset_right = 233.0
offset_bottom = 761.0
theme = ExtResource("1_wh8a7")
text = "12345"
vertical_alignment = 1

[node name="GameEndContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameEndLabel" type="Label" parent="GameEndContainer"]
layout_mode = 2
theme = ExtResource("1_wh8a7")
text = "You Lose!"
